Fixed Cuneiform button spacing and added loading text

--- a/src/sketches/cuneiformNumConverter/Cuneiform.scss
+++ b/src/sketches/cuneiformNumConverter/Cuneiform.scss
@@ -1,7 +1,8 @@
 #controls {
+    display: flex;
+    justify-content: space-around;
+
     button {
-        margin: auto;
-        display: inline-block;
         width: 40%;
         font-size: large;
     }
